--- a/src/components/plate-ui/code-block-element.css
+++ b/src/components/plate-ui/code-block-element.css
@@ -6,22 +6,22 @@
 /**
  * One Light colours (accurate as of commit eb064bf on 19 Feb 2021)
  * From colors.less
- * --mono-1: hsl(230, 8%, 24%);
+ * --mono-1: hsl(228deg, 24%, 72%);
  * --mono-2: hsl(230, 6%, 44%);
  * --mono-3: hsl(230, 4%, 64%)
- * --hue-1: hsl(198, 99%, 37%);
- * --hue-2: hsl(221, 87%, 60%);
- * --hue-3: hsl(301, 63%, 40%);
- * --hue-4: hsl(119, 34%, 47%);
- * --hue-5: hsl(5, 74%, 59%);
- * --hue-5-2: hsl(344, 84%, 43%);
- * --hue-6: hsl(35, 99%, 36%);
- * --hue-6-2: hsl(35, 99%, 40%);
- * --syntax-fg: hsl(230, 8%, 24%);
+ * --hue-1: hsl(199deg, 76%, 69%);
+ * --hue-2: hsl(217deg, 92%, 76%);
+ * --hue-3: hsl(316deg, 72%, 86%);
+ * --hue-4: hsl(115deg, 54%, 76%);
+ * --hue-5: hsl(23deg, 92%, 75%);
+ * --hue-5-2: hsl(343deg, 81%, 75%);
+ * --hue-6: hsl(10deg, 56%, 91%);
+ * --hue-6-2: hsl(23deg, 92%, 75%);
+ * --syntax-fg: hsl(228deg, 24%, 72%);
  * --syntax-bg: hsl(230, 1%, 98%);
  * --syntax-gutter: hsl(230, 1%, 62%);
  * --syntax-guide: hsla(230, 8%, 24%, 0.2);
- * --syntax-accent: hsl(230, 100%, 66%);
+ * --syntax-accent: hsl(199deg, 76%, 69%);
  * From syntax-variables.less
  * --syntax-selection-color: hsl(230, 1%, 90%);
  * --syntax-gutter-background-color-selected: hsl(230, 1%, 90%);
@@ -31,9 +31,7 @@
 .slate-code_block code[class*='language-'],
 .slate-code_block pre[class*='language-'] {
   background: hsl(230, 1%, 98%);
-  color: hsl(230, 8%, 24%);
-  font-family: 'Fira Code', 'Fira Mono', Menlo, Consolas, 'DejaVu Sans Mono',
-    monospace;
+  color: hsl(228deg, 24%, 72%);
   direction: ltr;
   text-align: left;
   white-space: pre;
@@ -88,7 +86,7 @@
 .token.doctype,
 .token.punctuation,
 .token.entity {
-  color: hsl(230, 8%, 24%);
+  color: hsl(228deg, 24%, 72%);
 }
 
 .token.attr-name,
@@ -97,19 +95,21 @@
 .token.constant,
 .token.number,
 .token.atrule {
-  color: hsl(35, 99%, 36%);
+  color: hsl(10deg, 56%, 91%);
 }
 
 .token.keyword {
-  color: hsl(301, 63%, 40%);
+  color: hsl(316deg, 72%, 86%);
 }
 
 .token.property,
 .token.tag,
 .token.symbol,
 .token.deleted,
-.token.important {
-  color: hsl(5, 74%, 59%);
+.token.important,
+.token.attr-value,
+.token.attr-value > .token.punctuation {
+  color: hsl(23deg, 92%, 75%);
 }
 
 .token.selector,
@@ -117,86 +117,84 @@
 .token.char,
 .token.builtin,
 .token.inserted,
-.token.regex,
-.token.attr-value,
-.token.attr-value > .token.punctuation {
-  color: hsl(119, 34%, 47%);
+.token.regex {
+  color: hsl(115deg, 54%, 76%);
 }
 
 .token.variable,
 .token.operator,
 .token.function {
-  color: hsl(221, 87%, 60%);
+  color: hsl(217deg, 92%, 76%);
 }
 
 .token.url {
-  color: hsl(198, 99%, 37%);
+  color: hsl(199deg, 76%, 69%);
 }
 
 /* HTML overrides */
 .token.attr-value > .token.punctuation.attr-equals,
 .token.special-attr > .token.attr-value > .token.value.css {
-  color: hsl(230, 8%, 24%);
+  color: hsl(228deg, 24%, 72%);
 }
 
 /* CSS overrides */
 .language-css .token.selector {
-  color: hsl(5, 74%, 59%);
+  color: hsl(23deg, 92%, 75%);
 }
 
 .language-css .token.property {
-  color: hsl(230, 8%, 24%);
+  color: hsl(228deg, 24%, 72%);
 }
 
 .language-css .token.function,
 .language-css .token.url > .token.function {
-  color: hsl(198, 99%, 37%);
+  color: hsl(199deg, 76%, 69%);
 }
 
 .language-css .token.url > .token.string.url {
-  color: hsl(119, 34%, 47%);
+  color: hsl(115deg, 54%, 76%);
 }
 
 .language-css .token.important,
 .language-css .token.atrule .token.rule {
-  color: hsl(301, 63%, 40%);
+  color: hsl(316deg, 72%, 86%);
 }
 
 /* JS overrides */
 .language-javascript .token.operator {
-  color: hsl(301, 63%, 40%);
+  color: hsl(316deg, 72%, 86%);
 }
 
 .language-javascript
   .token.template-string
   > .token.interpolation
   > .token.interpolation-punctuation.punctuation {
-  color: hsl(344, 84%, 43%);
+  color: hsl(343deg, 81%, 75%);
 }
 
 /* JSON overrides */
 .language-json .token.operator {
-  color: hsl(230, 8%, 24%);
+  color: hsl(228deg, 24%, 72%);
 }
 
 .language-json .token.null.keyword {
-  color: hsl(35, 99%, 36%);
+  color: hsl(10deg, 56%, 91%);
 }
 
 /* MD overrides */
 .language-markdown .token.url,
 .language-markdown .token.url > .token.operator,
 .language-markdown .token.url-reference.url > .token.string {
-  color: hsl(230, 8%, 24%);
+  color: hsl(228deg, 24%, 72%);
 }
 
 .language-markdown .token.url > .token.content {
-  color: hsl(221, 87%, 60%);
+  color: hsl(217deg, 92%, 76%);
 }
 
 .language-markdown .token.url > .token.url,
 .language-markdown .token.url-reference.url {
-  color: hsl(198, 99%, 37%);
+  color: hsl(199deg, 76%, 69%);
 }
 
 .language-markdown .token.blockquote.punctuation,
@@ -206,22 +204,22 @@
 }
 
 .language-markdown .token.code-snippet {
-  color: hsl(119, 34%, 47%);
+  color: hsl(115deg, 54%, 76%);
 }
 
 .language-markdown .token.bold .token.content {
-  color: hsl(35, 99%, 36%);
+  color: hsl(10deg, 56%, 91%);
 }
 
 .language-markdown .token.italic .token.content {
-  color: hsl(301, 63%, 40%);
+  color: hsl(316deg, 72%, 86%);
 }
 
 .language-markdown .token.strike .token.content,
 .language-markdown .token.strike .token.punctuation,
 .language-markdown .token.list.punctuation,
 .language-markdown .token.title.important > .token.punctuation {
-  color: hsl(5, 74%, 59%);
+  color: hsl(23deg, 92%, 75%);
 }
 
 /* General */
@@ -276,7 +274,7 @@ div.code-toolbar > .toolbar.toolbar > .toolbar-item > a:focus,
 div.code-toolbar > .toolbar.toolbar > .toolbar-item > span:hover,
 div.code-toolbar > .toolbar.toolbar > .toolbar-item > span:focus {
   background: hsl(230, 1%, 78%); /* custom: darken(--syntax-bg, 20%) */
-  color: hsl(230, 8%, 24%);
+  color: hsl(228deg, 24%, 72%);
 }
 
 /* Line Highlight plugin overrides */
@@ -289,7 +287,7 @@ div.code-toolbar > .toolbar.toolbar > .toolbar-item > span:focus {
 .line-highlight.line-highlight:before,
 .line-highlight.line-highlight[data-end]:after {
   background: hsl(230, 1%, 90%);
-  color: hsl(230, 8%, 24%);
+  color: hsl(228deg, 24%, 72%);
   padding: 0.1em 0.6em;
   border-radius: 0.3em;
   box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2); /* same as Toolbar plugin default */
@@ -321,25 +319,25 @@ pre[id].linkable-line-numbers.linkable-line-numbers
 .rainbow-braces .token.token.punctuation.brace-level-1,
 .rainbow-braces .token.token.punctuation.brace-level-5,
 .rainbow-braces .token.token.punctuation.brace-level-9 {
-  color: hsl(5, 74%, 59%);
+  color: hsl(23deg, 92%, 75%);
 }
 
 .rainbow-braces .token.token.punctuation.brace-level-2,
 .rainbow-braces .token.token.punctuation.brace-level-6,
 .rainbow-braces .token.token.punctuation.brace-level-10 {
-  color: hsl(119, 34%, 47%);
+  color: hsl(115deg, 54%, 76%);
 }
 
 .rainbow-braces .token.token.punctuation.brace-level-3,
 .rainbow-braces .token.token.punctuation.brace-level-7,
 .rainbow-braces .token.token.punctuation.brace-level-11 {
-  color: hsl(221, 87%, 60%);
+  color: hsl(217deg, 92%, 76%);
 }
 
 .rainbow-braces .token.token.punctuation.brace-level-4,
 .rainbow-braces .token.token.punctuation.brace-level-8,
 .rainbow-braces .token.token.punctuation.brace-level-12 {
-  color: hsl(301, 63%, 40%);
+  color: hsl(316deg, 72%, 86%);
 }
 
 /* Diff Highlight plugin overrides */
@@ -417,7 +415,7 @@ pre > code.diff-highlight .token.token.inserted:not(.prefix) *::selection {
 /* For time, this is the alternate colour */
 .prism-previewer-angle.prism-previewer-angle circle,
 .prism-previewer-time.prism-previewer-time circle {
-  stroke: hsl(230, 8%, 24%);
+  stroke: hsl(228deg, 24%, 72%);
   stroke-opacity: 1;
 }
 
@@ -425,7 +423,7 @@ pre > code.diff-highlight .token.token.inserted:not(.prefix) *::selection {
 .prism-previewer-easing.prism-previewer-easing circle,
 .prism-previewer-easing.prism-previewer-easing path,
 .prism-previewer-easing.prism-previewer-easing line {
-  stroke: hsl(230, 8%, 24%);
+  stroke: hsl(228deg, 24%, 72%);
 }
 
 /* Fill colour of the handle */
